@@ -3,6 +3,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 0.65 Not Released
  - Add fixed mapping between moniker to packed files #64
  - Add EXPERIMENTAL support for "fallback_to_latest"
+ - Add EXPERIMENTAL test_app() to ensure all assets are created
  - Remove EXPERIMENTAL support for reloader.js
  - Remove support for in-memory assets #64
  - Fix memory leak
